==> eclipse-oniro-mirrors/device_soc_st/stm32f407zg/uniproton/board/hdf_platform/src/gpio_stm32f407.c <==
#include <stdlib.h>
#include "hal_gpio.h"
#include "hcs_macro.h"
#include "hdf_config_macro.h"
#include "gpio_core.h"
#include "hdf_log.h"
#include "prt_hwi.h"
#include "os_cpu_armv7_m_external.h"
#include "stm32f4xx_exti.h"
#include "stm32f4xx_syscfg.h"
#define HDF_LOG_TAG gpio_stm_c
#define EXTI_GROUP_MAX 11
#define EXTI_PINSOURCE_MAX 16
#define EXTI_LINE_MAX 16
#define NVIC_IRQ_CHANNEL_MAX 5

static int32_t GpioDevWrite(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t val)
{
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    HDF_LOGI("%s %d ,write pin num %d", __func__, __LINE__, realPin);
    HDF_LOGI("pingReg is %d", pinReg);
    GPIO_TypeDef *gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    if (val) {
        GPIO_SetBits(gpiox, pinReg);
    } else {
        GPIO_ResetBits(gpiox, pinReg);
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevRead(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t *val)
{
    HDF_LOGI("entering GpioDevRead.\r\n");
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    uint16_t value = 0;
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    HDF_LOGI("%s %d ,read pin num %d", __func__, __LINE__, realPin);
    HDF_LOGI("pingReg is %d", pinReg);
    GPIO_TypeDef *gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    value = GPIO_ReadInputDataBit(gpiox, pinReg);
    *val = value;
    HDF_LOGI("read value is %d", value);
    return HDF_SUCCESS;
}

static void InitGpioClock(STM32_GPIO_GROUP group)
{
    switch (group) {
        case STM32_GPIO_GROUP_A:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);
            break;
        case STM32_GPIO_GROUP_B:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);
            break;
        case STM32_GPIO_GROUP_C:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);
            break;
        case STM32_GPIO_GROUP_D:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD, ENABLE);
            break;
        case STM32_GPIO_GROUP_E:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOE, ENABLE);
            break;
        case STM32_GPIO_GROUP_F:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);
            break;
        case STM32_GPIO_GROUP_G:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOG, ENABLE);
            break;
        case STM32_GPIO_GROUP_H:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOH, ENABLE);
            break;
        case STM32_GPIO_GROUP_I:
            RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOI, ENABLE);
            break;
        default:
            break;
    }
}

static int32_t InitGpioDevice(GpioDevice *device)
{
    GPIO_InitTypeDef gpioInitStruct = {0};

    if (device == NULL) {
        HDF_LOGE("%s: device is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    uint32_t halGpio = g_stmRealPinMaps[device->resource.realPin];
    if (halGpio > GPIO_Pin_15 || halGpio < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, halGpio);
        return HDF_ERR_NOT_SUPPORT;
    }
    /* init clock */
    InitGpioClock(device->resource.group);

    GPIO_TypeDef *goiox = g_gpioxMaps[device->resource.group];

    if (device->resource.mode == GPIO_Mode_AF) {
        GPIO_PinAFConfig(goiox, device->resource.realPin, device->resource.alternate);
    }

    gpioInitStruct.GPIO_Pin = halGpio;
    gpioInitStruct.GPIO_Mode = device->resource.mode;
    gpioInitStruct.GPIO_PuPd = device->resource.pupd;
    gpioInitStruct.GPIO_Speed = device->resource.speed;
    gpioInitStruct.GPIO_OType = device->resource.type;

    GPIO_Init(goiox, &gpioInitStruct);

    return HDF_SUCCESS;
}

static int32_t GpioDevGetDir(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t *dir)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    *dir = g_gpioPinsMap[gpio].mode;
    return HDF_SUCCESS;
}

static int32_t GpioDevSetIrq(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t mode)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    if (mode == EXTI_Trigger_Rising) {
        g_gpioExitCfg[gpio].EXTI_Trigger = EXTI_Trigger_Rising;
    } else if (mode == EXTI_Trigger_Falling) {
        g_gpioExitCfg[gpio].EXTI_Trigger = EXTI_Trigger_Falling;
    } else {
        HDF_LOGE("%s %d, error mode:%d", __func__, __LINE__, mode);
        return HDF_ERR_NOT_SUPPORT;
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevUnSetIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevEnableIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    uintptr_t intSave;
    (void)cntlr;
    EXTI_InitTypeDef exitInitConfig = {0};
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    SYSCFG_EXTILineConfig(g_extiGpioxMaps[g_gpioPinsMap[gpio].group], g_extiPinSourceMaps[realPin]);
    exitInitConfig.EXTI_Line = g_extiLineMaps[realPin];
    exitInitConfig.EXTI_Mode = EXTI_Mode_Interrupt;
    exitInitConfig.EXTI_Trigger = g_gpioExitCfg[gpio].EXTI_Trigger;
    exitInitConfig.EXTI_LineCmd = ENABLE;
    EXTI_Init(&exitInitConfig);
    if (pinReg > GPIO_Pin_4) {
        HDF_LOGE("%s %d, this pin out of range can not be set to irq mode.\r\n", __func__, __LINE__);
        return HDF_ERR_NOT_SUPPORT;
    }
    intSave = PRT_HwiSetAttr(g_nvicIrqChannel[realPin], OS_HWI_PRI_HIGHEST, OS_HWI_MODE_ENGROSS);
    if (intSave != OS_OK) {
        HDF_LOGE("%s %d, PRT_HwiSetAttr failed!!!\n\r", __func__, __LINE__);
    }
    intSave = PRT_HwiCreate(g_nvicIrqChannel[realPin], OemGpioIrqHdl, gpio);
    if (intSave != OS_OK) {
        HDF_LOGE("%s %d, PRT_HwiCreate failed!!!\n\r", __func__, __LINE__);
    }
    PRT_HwiEnable(g_nvicIrqChannel[realPin]);
    return HDF_SUCCESS;
}

static int32_t GpioDevDisableIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > GPIO_Pin_15 || pinReg < GPIO_Pin_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    PRT_HwiDisable(g_nvicIrqChannel[realPin]);
    PRT_HwiDelete(g_nvicIrqChannel[realPin]);
    return HDF_SUCCESS;
}
