==> x3pi/tz-llm-trustzone/tz-llm/drivers_hdf_core_full/drivers/hdf_core/adapter/platform/gpio/gpio_stm32f4xx.c <==
#include <stdlib.h>
#include "hal_gpio.h"
#include "hal_exti.h"
#include "hcs_macro.h"
#include "hdf_config_macro.h"
#include "device_resource_if.h"
#include "gpio_core.h"
#include "hdf_log.h"
#include "osal_irq.h"
#define HDF_LOG_TAG gpio_stm_c

static void InitGpioClock(STM32_GPIO_GROUP group)
{
    switch (group) {
        case STM32_GPIO_GROUP_A:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOA);
            break;
        case STM32_GPIO_GROUP_B:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB);
            break;
        case STM32_GPIO_GROUP_C:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOC);
            break;
        case STM32_GPIO_GROUP_D:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOD);
            break;
        case STM32_GPIO_GROUP_E:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOE);
            break;
        case STM32_GPIO_GROUP_F:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOF);
            break;
        case STM32_GPIO_GROUP_G:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOG);
            break;
        case STM32_GPIO_GROUP_H:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOH);
            break;
        case STM32_GPIO_GROUP_I:
            LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOI);
            break;
        default:
            break;
    }
}

static int32_t InitGpioDevice(const GpioDevice* device)
{
    LL_GPIO_InitTypeDef gpioInitStruct = {0};
    if (device == NULL) {
        HDF_LOGE("%s: device is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    uint32_t halGpio = g_stmRealPinMaps[device->resource.realPin];
    if (halGpio > LL_GPIO_PIN_15 || halGpio < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, halGpio);
        return HDF_ERR_NOT_SUPPORT;
    }

    /* init clock */
    InitGpioClock(device->resource.group);

    GPIO_TypeDef* goiox = g_gpioxMaps[device->resource.group];
    if (device->resource.mode & LL_GPIO_MODE_OUTPUT) {
        LL_GPIO_ResetOutputPin(goiox, halGpio);
    }

    gpioInitStruct.Pin = halGpio;
    gpioInitStruct.Mode = device->resource.mode;
    gpioInitStruct.Pull = device->resource.pull;
    gpioInitStruct.Speed = device->resource.speed;
    gpioInitStruct.OutputType = device->resource.outputType;
    gpioInitStruct.Alternate = device->resource.alternate;
    LL_GPIO_Init(goiox, &gpioInitStruct);

    return HDF_SUCCESS;
}

static int32_t GpioDevWrite(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t val)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    HDF_LOGE("%s %d ,write pin num %d", __func__, __LINE__, realPin);
    GPIO_TypeDef* gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    if (val) {
        LL_GPIO_SetOutputPin(gpiox, pinReg);
    } else {
        LL_GPIO_ResetOutputPin(gpiox, pinReg);
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevRead(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t *val)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    uint16_t value = 0;
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    GPIO_TypeDef* gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    value = LL_GPIO_ReadInputPin(gpiox, pinReg);
    *val = value;

    return HDF_SUCCESS;
}

static int32_t GpioDevGetDir(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t *dir)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    uint16_t value = 0;
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }
    GPIO_TypeDef* gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    value = LL_GPIO_GetPinMode(gpiox, pinReg);
    *dir = value;

    return HDF_SUCCESS;
}

static int32_t GpioDevSetIrq(struct GpioCntlr *cntlr, uint16_t gpio, uint16_t mode)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    if (mode == OSAL_IRQF_TRIGGER_RISING) {
        g_gpioExitCfg[gpio].trigger = LL_EXTI_TRIGGER_RISING;
    } else if (mode == OSAL_IRQF_TRIGGER_FALLING) {
        g_gpioExitCfg[gpio].trigger = LL_EXTI_TRIGGER_FALLING;
    } else {
        HDF_LOGE("%s %d, error mode:%d", __func__, __LINE__, mode);
        return HDF_ERR_NOT_SUPPORT;
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevUnSetIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    (void)cntlr;
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    return HDF_SUCCESS;
}

static int32_t GpioDevEnableIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    (void)cntlr;
    LL_EXTI_InitConfig exitInitConfig = {0};
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    exitInitConfig.Exithandler = OemGpioIrqHdl;
    exitInitConfig.Gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    exitInitConfig.initType.Line_0_31 = g_gpioExitLineMap[g_gpioPinsMap[gpio].realPin];
    exitInitConfig.initType.LineCommand = ENABLE;
    exitInitConfig.initType.Mode = LL_EXTI_MODE_IT;
    exitInitConfig.PinReg = pinReg;
    exitInitConfig.initType.Trigger = g_gpioExitCfg[gpio].trigger;

    LL_SETUP_EXTI(&exitInitConfig, g_gpioPinsMap[gpio].realPin, gpio, g_gpioPinsMap[gpio].group);

    return HDF_SUCCESS;
}

static int32_t GpioDevDisableIrq(struct GpioCntlr *cntlr, uint16_t gpio)
{
    (void)cntlr;
    LL_EXTI_InitConfig exitInitConfig = {0};
    uint16_t realPin = g_gpioPinsMap[gpio].realPin;
    uint32_t pinReg = g_stmRealPinMaps[realPin];
    if (pinReg > LL_GPIO_PIN_15 || pinReg < LL_GPIO_PIN_0) {
        HDF_LOGE("%s %d, error pin:%d", __func__, __LINE__, realPin);
        return HDF_ERR_NOT_SUPPORT;
    }

    exitInitConfig.Exithandler = NULL;
    exitInitConfig.Gpiox = g_gpioxMaps[g_gpioPinsMap[gpio].group];
    exitInitConfig.initType.Line_0_31 = g_gpioExitLineMap[g_gpioPinsMap[gpio].realPin];
    exitInitConfig.initType.LineCommand = DISABLE;
    exitInitConfig.initType.Mode = LL_EXTI_MODE_IT;
    exitInitConfig.PinReg = pinReg;
    exitInitConfig.initType.Trigger = g_gpioExitCfg[gpio].trigger;
    LL_SETUP_EXTI(&exitInitConfig, g_gpioPinsMap[gpio].realPin, gpio, g_gpioPinsMap[gpio].group);

    return HDF_SUCCESS;
}
